@@ -1,3 +1,7 @@
+2011-05-31  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/ext/mousetrap.jl: added mousetrapping feature,
+	original module by Fernando Carmona Varo, modified by me
+
 2011-05-29  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/wallpaper.jl: added option to pass extra
 	arguements to wallpaper-setter. Place widget-text to the left
